<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">验票系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_content_text">标题</string>
    <string name="table_campaign">活动验证</string>
    <string name="table_venue">场馆验证</string>
    <string name="main_scan_qr_text">扫描二维码</string>
    <string name="main_scan_input_text">输入取票码</string>
    <string name="main_title_content">验证系统</string>
     <string name="scan_text">将二维码放入扫描框内</string>
 	 <string name="scan_text_two">可自动扫描二维码</string>
     
     <string name="input_code_title">活动验证</string>
    <string name="select_input_code_title">订单查询</string>
     <string name="input_code_venue_title">场馆验证</string>
     <string name="input_confirm_text">查询</string>
     <string name="input_frame_text">输入取票码</string>
     <string name="input_verification_text">状态：     </string>
     <string name="order_context">null</string>
     <string name="order_context_prefix">订单编号:</string>
     <string name="order_context_address">地址：</string>
     <string name="order_context_activity">活动：</string>
     <string name="order_context_screenings">场次：</string>
     <string name="order_context_seat">座位：</string>
     <string name="order_context_number">人数：</string>
     <string name="order_context_ticket">取票码：</string>
     <string name="order_context_phone">手机号：</string>
     <string name="order_context_ok">确认验证</string>
     <string name="code_info_dialog_content">验证成功!</string>
     <string name="dialog_fastlogin_login">登录</string>
     <string name="login_account">请输入帐号</string>
     <string name="login_password">请输入密码</string>

     <string name="account_return_text">退出登录</string>
     <string name="account_content_id_text">管理员用户</string>
     <string name="account_content_belonging_text">所属：</string>
     <string name="account_content_user_text">角色： </string>
     <string name="account_info_title">账户信息</string>
     
     <!-- 活动室验证信息 -->
     <string name="venue_verification_text">状 态：未验票</string>
     <string name="venue_context">null</string>
     <string name="venue_context_prefix">订单编号：</string>
     <string name="venue_context_address">地址：</string>
     <string name="venue_context_venue">场馆：</string>
     <string name="venue_context_room">活动室：</string>
     <string name="venue_context_usetime">使用时间：</string>
     <string name="venue_context_usegroups">使用团体：</string>
     <string name="venue_context_ticket">取票码:</string>
     <string name="venue_context_phone">手机号：</string>
     <string name="venue_context_ok">确认验证</string>
     
    
</resources>
