<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/activity_bg_color"
        >

        <ImageButton
            android:id="@+id/fastlogin_return"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:src="@drawable/sh_icon_return" />
    </LinearLayout>


    <LinearLayout
        style="@style/item_ll_style"
        android:layout_marginTop="40dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="#333333"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:text="账号"
            />
        
        <EditText
            android:id="@+id/fastlogin_input_account"
            style="@style/fastlogin_input_style"
            android:text=""
            android:hint="@string/login_account"/>

        
    </LinearLayout>

    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@style/item_line_style"></View>

    <LinearLayout
        style="@style/item_ll_style"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="#333333"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:text="密码"
            />

        <EditText
            android:id="@+id/fastlogin_input_password"
            style="@style/fastlogin_input_style"
            android:hint="@string/login_password"
            android:text=""
            android:inputType="textPassword" />


    </LinearLayout>

    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
       style="@style/item_line_style"></View>


    <Button
        android:id="@+id/fastlogin_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_white_nullcontent_rect"
        android:text="@string/dialog_fastlogin_login"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/dialog_text_size" />

</LinearLayout>